--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -1,11 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Agenda\n",
+    "\n",
+    "1. What is data cleaning? Why do we need to clean our data?\n",
+    "2. `NaN`/`NA`\n",
+    "    - What are they? Good and bad\n",
+    "    - What types of values are they, and how does this complicate things (or not)?\n",
+    "    - `dropna`\n",
+    "    - Selective dropping of `NaN`\n",
+    "    - `fillna` to replace values with a scalar\n",
+    "    - `fillna` with a method call\n",
+    "3. `interpolate` -- replacing `NaN` values with reasonable fakes\n",
+    "4. Finding and removing outliers\n",
+    "5. Regularizing string data "
+   ]
   }
  ],
  "metadata": {
