--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -16,8 +16,16 @@
     "    - `fillna` with a method call\n",
     "3. `interpolate` -- replacing `NaN` values with reasonable fakes\n",
     "4. Finding and removing outliers\n",
-    "5. Regularizing string data "
+    "5. Regularizing string data with strip/lower/replace\n",
+    "6. Finding and removing duplicate data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
