--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -21,11 +21,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# What is data cleaning?\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
