--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -25,6 +25,13 @@
    "metadata": {},
    "source": [
     "# What is data cleaning?\n",
+    "\n",
+    "When we read in data from somewhere, it will almost always have flaws. That's because:\n",
+    "\n",
+    "- human error\n",
+    "- computers going down\n",
+    "- sensors that are wrong (or down)\n",
+    "- people refusing to answer questions\n",
     "\n"
    ]
   }
