--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -14,6 +14,7 @@
     "    - Selective dropping of `NaN`\n",
     "    - `fillna` to replace values with a scalar\n",
     "    - `fillna` with a method call\n",
+    "2. Removing bad values\n",
     "3. `interpolate` -- replacing `NaN` values with reasonable fakes\n",
     "4. Finding and removing outliers\n",
     "5. Regularizing string data with strip/lower/replace\n",
@@ -32,6 +33,8 @@
     "- computers going down\n",
     "- sensors that are wrong (or down)\n",
     "- people refusing to answer questions\n",
+    "\n",
+    "If you read in a data set, it will almost always have problems *or* someone who prepared the data set did the hard work ahead of you.\n",
     "\n"
    ]
   }
