--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -181,6 +181,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([97, 85, np.nan, 98, 89])\n",
+    "a.mean()  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
