--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -374,27 +374,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    97.0\n",
-       "1    85.0\n",
-       "2     NaN\n",
-       "3    98.0\n",
-       "4    89.0\n",
-       "dtype: float64"
+       "0    True\n",
+       "1    True\n",
+       "2    True\n",
+       "3    True\n",
+       "4    True\n",
+       "dtype: bool"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s"
+    "# you cannot filter our NaN in this way!\n",
+    "s != np.nan"
    ]
   },
   {
@@ -403,7 +404,22 @@
    "source": [
     "# NaN vs NA\n",
     "\n",
-    "If I have a series of strings, and one of the values in that series is `NaN`, what type of values will we have? "
+    "If I have a series of strings, and one of the values in that series is `NaN`, what will be the dtype of that series? The answer: `object`, but that's true for all string series, because Pandas always uses `object` for strings and anything else it doesn't know what to do with.\n",
+    "\n",
+    "What if you have a bunch of integers? You'll turn them into floats.\n",
+    "\n",
+    "This is annoying! We want to be able to say that a series contains ints and the occasional `NaN`. But we cannot.\n",
+    "\n",
+    "If we try to turn a series of ints + `NaN` into ints, we'll get an error!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.astype(int)  # get a "
    ]
   }
  ],
