--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -557,10 +557,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Series([97, 85, np.nan, 98, 89, np.nan, np.nan, 80])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    97.0\n",
+       "1    85.0\n",
+       "2     NaN\n",
+       "3    98.0\n",
+       "4    89.0\n",
+       "5     NaN\n",
+       "6     NaN\n",
+       "7    80.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# how many NaN values are in my series?\n",
+    "\n",
+    "# Option 1: use .isna() "
+   ]
   }
  ],
  "metadata": {
