--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -594,14 +594,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    5\n",
+       "True     3\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# how many NaN values are in my series?\n",
     "\n",
-    "# Option 1: use .isna() "
+    "# Option 1: use .isna() and run value_counts() on the results\n",
+    "s.isna().value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.isna().sum()   # because True==1 and False==0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
