--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -642,7 +642,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Option 1 for dealing with NaN is just to get rid of it\n",
+    "# the dropna method removes all NaN valu\n",
+    "\n",
+    "s.dropna()"
+   ]
   }
  ],
  "metadata": {
