--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -639,15 +639,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    97.0\n",
+       "1    85.0\n",
+       "3    98.0\n",
+       "4    89.0\n",
+       "7    80.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Option 1 for dealing with NaN is just to get rid of it\n",
+    "# the dropna method removes all NaN values in a series\n",
+    "\n",
+    "s.dropna()   # this returns a new series (not modifying the original!), containing non-NaN values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     97.0\n",
+       "1     85.0\n",
+       "2    999.0\n",
+       "3     98.0\n",
+       "4     89.0\n",
+       "5    999.0\n",
+       "6    999.0\n",
+       "7     80.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.fillna(999)  # retu"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Option 1 for dealing with NaN is just to get rid of it\n",
-    "# the dropna method removes all NaN valu\n",
-    "\n",
-    "s.dropna()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
