--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -684,13 +684,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.fillna(999)  # retu"
+    "s.fillna(999)  # returns a new series in which all NaN values are replaced by the scalar value we gave"
    ]
   },
   {
@@ -698,7 +698,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = DataFrame([[10, 20, np.nan],\n",
+    "                [40, 50, 60],\n",
+    "                [np.nan, np.nan, 90],\n",
+    "                [100, 110, np.nan]],\n",
+    "               index=list('abcd'),\n",
+    "               coul"
+   ]
   }
  ],
  "metadata": {
