--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -1273,11 +1273,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Cleaning data frames from `NaN`\n",
+    "\n",
+    "1. Create a simple data frame (like mine), and make sure to have some `NaN` values in there.\n",
+    "2. Calculate the mean for each column.\n",
+    "3. What happens if you use `dropna` on your data frame?\n",
+    "4. What happens if you use `fillna` on your data frame with the result of `df.mean()`?\n",
+    "5. Try the same thing, but using "
+   ]
   }
  ],
  "metadata": {
