--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -1282,8 +1282,15 @@
     "2. Calculate the mean for each column.\n",
     "3. What happens if you use `dropna` on your data frame?\n",
     "4. What happens if you use `fillna` on your data frame with the result of `df.mean()`?\n",
-    "5. Try the same thing, but using "
+    "5. Try the same thing, but using `pd.NA`. You'll need to define a data frame with `dtype=Int64Dtype()` "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
