--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -1287,6 +1287,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v</th>\n",
+       "      <th>w</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>559.0</td>\n",
+       "      <td>629.0</td>\n",
+       "      <td>192</td>\n",
+       "      <td>835.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>763.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>359.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>723.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>754.0</td>\n",
+       "      <td>804.0</td>\n",
+       "      <td>599</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>472.0</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>314</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       v      w      x    y      z\n",
+       "a    NaN  559.0  629.0  192  835.0\n",
+       "b  763.0    NaN  359.0    9  723.0\n",
+       "c    NaN  754.0  804.0  599   70.0\n",
+       "d  472.0  600.0    NaN  314    NaN"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "\n",
+    "df = DataFrame(np.random.randint(0, 1000, [4, 5]),\n",
+    "               index=list('abcd'),\n",
+    "               columns=list('vwxyz'))\n",
+    "df.loc['a', 'v'] = np.nan\n",
+    "df.loc['b', 'w'] = np.nan\n",
+    "df.loc['c', 'v'] = np.nan\n",
+    "df.loc['d', 'x'] = np.nan\n",
+    "df.loc['d', 'z'] = np.nan\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
