--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -1488,10 +1488,312 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v</th>\n",
+       "      <th>w</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>617.5</td>\n",
+       "      <td>559.000000</td>\n",
+       "      <td>629.000000</td>\n",
+       "      <td>192</td>\n",
+       "      <td>835.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>763.0</td>\n",
+       "      <td>637.666667</td>\n",
+       "      <td>359.000000</td>\n",
+       "      <td>9</td>\n",
+       "      <td>723.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>617.5</td>\n",
+       "      <td>754.000000</td>\n",
+       "      <td>804.000000</td>\n",
+       "      <td>599</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>472.0</td>\n",
+       "      <td>600.000000</td>\n",
+       "      <td>597.333333</td>\n",
+       "      <td>314</td>\n",
+       "      <td>542.666667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       v           w           x    y           z\n",
+       "a  617.5  559.000000  629.000000  192  835.000000\n",
+       "b  763.0  637.666667  359.000000    9  723.000000\n",
+       "c  617.5  754.000000  804.000000  599   70.000000\n",
+       "d  472.0  600.000000  597.333333  314  542.666667"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.fillna(df.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v</th>\n",
+       "      <th>w</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>559</td>\n",
+       "      <td>629</td>\n",
+       "      <td>192</td>\n",
+       "      <td>835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>763</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>359</td>\n",
+       "      <td>9</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>754</td>\n",
+       "      <td>804</td>\n",
+       "      <td>599</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>472</td>\n",
+       "      <td>600</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>314</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      v     w     x    y     z\n",
+       "a  <NA>   559   629  192   835\n",
+       "b   763  <NA>   359    9   723\n",
+       "c  <NA>   754   804  599    70\n",
+       "d   472   600  <NA>  314  <NA>"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's use pd.NA instead\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "df = DataFrame(np.random.randint(0, 1000, [4, 5]),\n",
+    "               index=list('abcd'),\n",
+    "               columns=list('vwxyz'),\n",
+    "              dtype=pd.Int64Dtype())\n",
+    "df.loc['a', 'v'] = pd.NA\n",
+    "df.loc['b', 'w'] = pd.NA\n",
+    "df.loc['c', 'v'] = pd.NA\n",
+    "df.loc['d', 'x'] = pd.NA\n",
+    "df.loc['d', 'z'] = pd.NA\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "v    Int64\n",
+       "w    Int64\n",
+       "x    Int64\n",
+       "y    Int64\n",
+       "z    Int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v</th>\n",
+       "      <th>w</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>5555</td>\n",
+       "      <td>559</td>\n",
+       "      <td>629</td>\n",
+       "      <td>192</td>\n",
+       "      <td>835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>763</td>\n",
+       "      <td>5555</td>\n",
+       "      <td>359</td>\n",
+       "      <td>9</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>5555</td>\n",
+       "      <td>754</td>\n",
+       "      <td>804</td>\n",
+       "      <td>599</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>472</td>\n",
+       "      <td>600</td>\n",
+       "      <td>5555</td>\n",
+       "      <td>314</td>\n",
+       "      <td>5555</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      v     w     x    y     z\n",
+       "a  5555   559   629  192   835\n",
+       "b   763  5555   359    9   723\n",
+       "c  5555   754   804  599    70\n",
+       "d   472   600  5555  314  5555"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.fillna(5555)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.fillna(df.mean"
+   ]
   }
  ],
  "metadata": {
