--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1943,17 +1943,51 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>559</td>\n",
+       "      <td>629</td>\n",
+       "      <td>192</td>\n",
+       "      <td>835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>763</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>359</td>\n",
+       "      <td>9</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>754</td>\n",
+       "      <td>804</td>\n",
+       "      <td>599</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>472</td>\n",
+       "      <td>600</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>314</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [v, w, x, y, z]\n",
-       "Index: []"
+       "      v     w     x    y     z\n",
+       "a  <NA>   559   629  192   835\n",
+       "b   763  <NA>   359    9   723\n",
+       "c  <NA>   754   804  599    70\n",
+       "d   472   600  <NA>  314  <NA>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,9 +1996,150 @@
     "# dropna is a bit ... much\n",
     "# we have two options to dropna that we can use\n",
     "# (1) thresh=n, where n is the number of non-NaN columns that must exist to keep the row\n",
-    "# (2) subset=[\n",
+    "# (2) subset=[], where we put a list of column names (strings) in there, to indicate where Pandas should actually look for NaN\n",
     "\n",
-    "df.dropna()"
+    "df.dropna(thresh=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v</th>\n",
+       "      <th>w</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>559</td>\n",
+       "      <td>629</td>\n",
+       "      <td>192</td>\n",
+       "      <td>835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>763</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>359</td>\n",
+       "      <td>9</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>754</td>\n",
+       "      <td>804</td>\n",
+       "      <td>599</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      v     w    x    y    z\n",
+       "a  <NA>   559  629  192  835\n",
+       "b   763  <NA>  359    9  723\n",
+       "c  <NA>   754  804  599   70"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(thresh=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v</th>\n",
+       "      <th>w</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>472</td>\n",
+       "      <td>600</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>314</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     v    w     x    y     z\n",
+       "d  472  600  <NA>  314  <NA>"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can use them together\n",
+    "\n",
+    "df.dropna(thresh=3, \n",
+    "          subset=['v', 'w', 'y'])"
    ]
   },
   {
