--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -2329,21 +2329,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     True\n",
-       "1     True\n",
-       "2    False\n",
-       "3     True\n",
-       "4     True\n",
-       "dtype: bool"
+       "0    10\n",
+       "1    20\n",
+       "3    40\n",
+       "4    50\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2352,7 +2351,81 @@
     "# how can I remove problematic values?\n",
     "# I'm looking to keep only those values in this series where the string has an .isdigit() of True\n",
     "\n",
-    "s.str.isdigit()"
+    "# by applying the result of s.str.isdigit() to s.loc, we keep only those values \n",
+    "# that can be turned into ints\n",
+    "\n",
+    "s.loc[s.str.isdigit()].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v</th>\n",
+       "      <th>w</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>559</td>\n",
+       "      <td>629</td>\n",
+       "      <td>192</td>\n",
+       "      <td>835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>763</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>359</td>\n",
+       "      <td>9</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      v     w    x    y    z\n",
+       "a  <NA>   559  629  192  835\n",
+       "b   763  <NA>  359    9  723"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can remove values over/under in the same way\n",
+    "\n",
+    "df.loc[df['x'] <= 700]"
    ]
   },
   {
