--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -2423,9 +2423,165 @@
     }
    ],
    "source": [
-    "# we can remove values over/under in the same way\n",
+    "# we can remove values over/under a certain threshold in the same way\n",
     "\n",
     "df.loc[df['x'] <= 700]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v</th>\n",
+       "      <th>w</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>559</td>\n",
+       "      <td>629</td>\n",
+       "      <td>192</td>\n",
+       "      <td>835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>763</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>359</td>\n",
+       "      <td>9</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>754</td>\n",
+       "      <td>804</td>\n",
+       "      <td>599</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      v     w    x    y    z\n",
+       "a  <NA>   559  629  192  835\n",
+       "b   763  <NA>  359    9  723\n",
+       "c  <NA>   754  804  599   70"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can remove values that are above mean+std\n",
+    "\n",
+    "\n",
+    "df.loc[  df['x'] <= df['x'].mean() + df['x'].std()   ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v</th>\n",
+       "      <th>w</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>559</td>\n",
+       "      <td>629</td>\n",
+       "      <td>192</td>\n",
+       "      <td>835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>754</td>\n",
+       "      <td>804</td>\n",
+       "      <td>599</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      v    w    x    y    z\n",
+       "a  <NA>  559  629  192  835\n",
+       "c  <NA>  754  804  599   70"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can remove values that are above mean+std\n",
+    "\n",
+    "(\n",
+    "    df\n",
+    "    .loc[  df['x'] <= df['x'].mean() + df['x'].std()   ]\n",
+    "    .loc[  df['x'] >= df['x'].mean() - df['x'].std()   ]\n",
+    ")"
    ]
   },
   {
