--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -2903,14 +2903,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age\n",
+       "True     6481\n",
+       "False      35\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# (2) let's find out how many age values aren't \"isdigit\"\n",
     "\n",
-    "df['age']."
+    "df['age'].str.isdigit().value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dateofdeath</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>Tony Lane</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>Gilbert Kaplan</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>Brian Johns</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>Natasha Aguilar</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>Fazu Aliyeva</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6538</th>\n",
+       "      <td>2016-12-27</td>\n",
+       "      <td>Barbara Tarbuck</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6539</th>\n",
+       "      <td>2016-12-27</td>\n",
+       "      <td>Hans Tietmeyer</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6540</th>\n",
+       "      <td>2016-12-27</td>\n",
+       "      <td>Ratnasiri Wickremanayake</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6541</th>\n",
+       "      <td>2016-12-27</td>\n",
+       "      <td>Cara Rafaela</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6542</th>\n",
+       "      <td>2016-12-27</td>\n",
+       "      <td>Balasaheb Vikhe Patil</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6481 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     dateofdeath                      name  age\n",
+       "0     2016-01-01                 Tony Lane   71\n",
+       "1     2016-01-01            Gilbert Kaplan   74\n",
+       "2     2016-01-01               Brian Johns   79\n",
+       "3     2016-01-01           Natasha Aguilar   45\n",
+       "4     2016-01-01              Fazu Aliyeva   83\n",
+       "...          ...                       ...  ...\n",
+       "6538  2016-12-27           Barbara Tarbuck   74\n",
+       "6539  2016-12-27            Hans Tietmeyer   85\n",
+       "6540  2016-12-27  Ratnasiri Wickremanayake   83\n",
+       "6541  2016-12-27              Cara Rafaela   23\n",
+       "6542  2016-12-27     Balasaheb Vikhe Patil   84\n",
+       "\n",
+       "[6481 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.loc[df['age'].str.isdigit()]\n",
+    "df['age'] = df['age'].astype(int)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77.0192871470452"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['age'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
