--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -3079,8 +3079,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
+   "execution_count": 130,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3197,7 +3199,7 @@
        "[6516 rows x 3 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3213,18 +3215,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "# let's say that I want to remove the - from all ages\n",
+    "# use a regexp to replace -\\d (two digits after a -) with nothing\n",
     "\n",
-    "df['age'] = df['age'].str.replace('-', '')"
+    "df['age'] = df['age'].str.replace(r'-\\d+', '', regex=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if we have four digits, just keep the first two\n",
+    "df['age'] = df['age'].str.replace(r'-\\d+', '', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3234,7 +3247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3243,7 +3256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -3263,16 +3276,16 @@
        "2661    7374\n",
        "4720    6970\n",
        "1043    6869\n",
-       "2080    6869\n",
        "1491    6768\n",
        "4327    6667\n",
        "1628    6364\n",
        "4176    6162\n",
-       "5369    5960\n",
+       "1718    5759\n",
+       "5502    5657\n",
        "Name: age, dtype: int64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
